--- a/requirements.txt
+++ b/requirements.txt
@@ -48,12 +48,14 @@ defusedxml==0.6.0
 diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
 distributed @ file:///C:/ci/distributed_1594742844291/work
 docutils==0.16
+dominate==2.6.0
 entrypoints==0.3
 et-xmlfile==1.0.1
 fastcache==1.1.0
 filelock==3.0.12
 flake8==3.8.3
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-Cors @ file:///tmp/build/80754af9/flask-cors_1609957731919/work
 fsspec==0.7.4
 future==0.18.2
@@ -228,6 +230,7 @@ typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1592847887441/w
 ujson==1.35
 unicodecsv==0.14.1
 urllib3==1.25.9
+visitor==0.1.3
 watchdog @ file:///C:/ci/watchdog_1593447437088/work
 wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
